--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ html<!DOCTYPE html>
 </head>
 <body>
 <button onclick="clickA()">播放/暂停</button>
-<audio id="audio" src="https://od.lk/s/MjlfMjM0MjQzMjBf/%E9%98%BF%E6%9C%A8-%E6%9C%89%E4%B8%80%E7%A7%8D%E7%88%B1%E5%8F%AB%E5%81%9A%E6%94%BE%E6%89%8B.flac">你的浏览器不支持</audio>
+<audio id="audio" src="https://od.lk/s/MjlfMjM0MzIzMDVf/%E5%A6%82%E6%9E%9C%E4%BA%91%E7%9F%A5%E9%81%93-%E8%AE%B8%E8%8C%B9%E8%8A%B8.flac">你的浏览器不支持</audio>
 <script>
     var a=document.getElementById("audio");
     function clickA(){
